Remove scrollbars, fix shoc course action, add kaizendevs in footer

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,7 +32,7 @@ img.instructor-image {
 
 div.caption {
 	height: 200px;
-	overflow: scroll;
+	/*overflow: scroll;*/
 }
 
 div.course-caption {
